# rootygine

./: .gitignore  Cargo.toml  README.md
src/: main.rs  search.rs
src/search/: evaluate.rs  threading.rs  transposition_table.rs  utils.rs
src/tests/: mod.rs
