[package]
name = "sc0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
log = "0.4.0"
rand = {version = "0.8.5", features = ["small_rng"]}
env_logger = "0.9.0"

[profile.release]
debug = true